# spacetraders-sdk-v3

./: .GITIGNORE  .flake8  LICENSE  README.md  default.env  pyproject.toml
docs/: changelog.md
src/spacetraders_sdk/: ratelimit.py  spacetraders_api.py  spacetraders_constants.py  spacetraders_enums.py  spacetraders_helper.py  spacetraders_logger.py  spacetraders_objects.py  spacetraders_sdk.py
tests/: test_api.py  test_logger.py  test_objects.py  test_sdk.py
trying/: tryobjects.py
